feat(api-gateway): add: routes for create task and get all tasks
added the create task and get all tasks routes in the api-gateway

re #7
